<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bga"
    tools:context="com.example.adil.checkup.Fragment.MedicationFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/linear_layout_rb"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/medication_text_long"
                android:textColor="@color/black_semi_transparent"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/linear_layout_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linear_layout_manager"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/grid_layout_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_layout_manager"
                android:visibility="gone" />
        </RadioGroup>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white" />

</FrameLayout>
